fix cell alignment

--- a/src/app/components/equipment-dialog/weapons-equipment-panel.component.scss
+++ b/src/app/components/equipment-dialog/weapons-equipment-panel.component.scss
@@ -122,8 +122,8 @@
     width: 100%;
 }
 
-.hit-header,
-.hit-cell {
+.centered-header,
+.centered-cell {
     display: inline-flex;
     gap: 3px;
     align-items: center;
